--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iakstudios.app.chaletIn">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -9,24 +15,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splach_screen"
-            android:theme="@style/splashTheme"
-            >
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_api_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".Splach_screen"
+            android:theme="@style/splashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".sigin_page"
+        <activity
+            android:name=".sigin_page"
+            android:theme="@style/splashTheme" />
+        <activity
+            android:name=".signup_page"
+            android:theme="@style/splashTheme" />
+        <activity
+            android:name=".Intro_page"
+            android:theme="@style/splashTheme" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/splashTheme"
-            />
-        <activity android:name=".signup_page"
-            android:theme="@style/splashTheme"
-            />
-        <activity android:name=".Intro_page"
-            android:theme="@style/splashTheme"
-            />
+           />
+
     </application>
 
 </manifest>
